--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,6 +5,9 @@
   </header>
 
 <%# new here %>
+  <div class="well">
+    <%= link_to '+ New Category', [:new, :admin, :category], class: 'btn btn-info' %>
+  </div>
 
   <div class="panel panel-default category">
 
