--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -30,9 +30,21 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+       <% if current_user %>
+        <li>
+          <%= current_user.first_name %>
+        </li>
+        <li>
+          <%= link_to "Logout", :session, :method => :delete %>
+        </li>
+       <% else %>
        <li>
-         <%= link_to 'Sign Up', :new_user %>
+       <%= link_to 'Sign Up', :new_user %>
        </li>
+       <li>
+       <%= link_to 'Login', :new_session %>
+       </li>
+       <% end %>
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
