--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,17 @@ body {
 form.button_to {
   display: inline;
 }
+
+// nav 
+.user-name {
+  color: #777;
+}
+
+@media (min-width: 768px) {
+  .user-name {
+    position: relative;
+    display: block;
+    padding: 15px;
+    line-height: 20px;
+  }
+}
