--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,3 +1,5 @@
-<h1>About Our Jungle</h1>
+<header class="page-header">
+  <h1>About Our Jungle</h1>
+</header>
 
 <p>Once upon a time, we decided to make a store that would stock THE WEIRDEST items out there. Now, however many years later here we are... We stock feet shoes, ugly bookshelves. You name it, if it's ugly, we got it!</p>
